# ESP32-S3-wip-project

./: .gitignore  CMakeLists.txt  README.md  esp_now_data.h  partitions_two_ota_3mb.csv  platformio.ini  sdkconfig.atoms3r-idf  sdkconfig.atoms3r-idf.old
src/: CMakeLists.txt  config.h  event_queue.cpp  event_queue.h  idf_component.yml  main.cpp  main.cpp.bak  sdkconfig.defaults  sensor_types.h
src/app_mesh_manager/: MeshManager.cpp  MeshManager.h
src/audio/: board_config.h  my_board.h
src/espnow_manager/: espnow_manager.cpp  espnow_manager.h
src/module_ai/: ai_service.cpp  ai_service.h  root_ca.h
src/module_mqtt/: mqtt_manager.cpp  mqtt_manager.h
src/module_wifi/: time_sync.c  wifi_manager.cpp  wifi_manager.h
